--- a/readMe
+++ b/readMe
@@ -7,5 +7,8 @@ git config --global user.email rakeshkumarark@gmail.com
 git config --global user.name rakeshkumarark
 git commit -m "initial commit"
 git remote add origin https://github.com/rakeshkumarark/projects.git
+git push origin master
+git add readMe
+git commit -m "initial commit"
 
 
